--- a/da-ptud-qllkmt/DTO/app.config
+++ b/da-ptud-qllkmt/DTO/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="DTO.Properties.Settings.QL_CUAHANGLINHKIENMAYTINHConnectionString"
-            connectionString="Data Source=ADMIN\SQLEXPRESS;Initial Catalog=QL_CUAHANGLINHKIENMAYTINH;User ID=sa;Password=123"
+            connectionString="Data Source=DANGTRI-LAPTOP\SQLEXPRESS;Initial Catalog=QL_CUAHANGLINHKIENMAYTINH;User ID=sa;Password=123"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
