--- a/da-ptud-qllkmt/GUI/GUI.csproj
+++ b/da-ptud-qllkmt/GUI/GUI.csproj
@@ -280,6 +280,12 @@
     <Compile Include="frmChiTietGio.Designer.cs">
       <DependentUpon>frmChiTietGio.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmChonKhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmChonKhachHang.Designer.cs">
+      <DependentUpon>frmChonKhachHang.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmDangKy.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -420,6 +426,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmChiTietGio.resx">
       <DependentUpon>frmChiTietGio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmChonKhachHang.resx">
+      <DependentUpon>frmChonKhachHang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmDangKy.resx">
       <DependentUpon>frmDangKy.cs</DependentUpon>
