--- a/da-ptud-qllkmt/GUI/GUI.csproj
+++ b/da-ptud-qllkmt/GUI/GUI.csproj
@@ -586,6 +586,19 @@
     <Content Include="Images\ban-phim-co-akko-3108-v2-world-tour-tokyo.jpg" />
     <Content Include="Images\intelcorei5-12600k.jpg" />
     <Content Include="Images\PSU_GG_GP-P1000GM-5.jpg" />
+    <None Include="Resources\96_pc_gaming %281%29.jpg" />
+    <None Include="Resources\distribution-center.png" />
+    <None Include="Resources\manufacture.png" />
+    <None Include="Resources\insurance.png" />
+    <None Include="Resources\factory.png" />
+    <None Include="Resources\pngaaa.com-5171640.png" />
+    <None Include="Resources\npp1.ico" />
+    <None Include="Resources\npp.ico" />
+    <None Include="Resources\ZlGSVm.jpg" />
+    <None Include="Resources\Home-80_icon-icons.com_573171.ico" />
+    <None Include="Resources\delete_delete_deleteusers_delete_male_user_maleclient_23481.png" />
+    <None Include="Resources\addusergroup_12511.png" />
+    <None Include="Resources\xoahd.ico" />
     <None Include="Resources\giphy.gif" />
     <None Include="Resources\trash-can_1153122.ico" />
     <None Include="Resources\addcthd.ico" />
