--- a/da-ptud-qllkmt/DTO/app.config
+++ b/da-ptud-qllkmt/DTO/app.config
@@ -6,5 +6,8 @@
         <add name="DTO.Properties.Settings.QL_CUAHANGLINHKIENMAYTINHConnectionString"
             connectionString="Data Source=ADMIN\SQLEXPRESS;Initial Catalog=QL_CUAHANGLINHKIENMAYTINH;User ID=sa;Password=123"
             providerName="System.Data.SqlClient" />
+        <add name="DTO.Properties.Settings.QL_CUAHANGLINHKIENMAYTINH1ConnectionString"
+            connectionString="Data Source=ADMIN\SQLEXPRESS;Initial Catalog=QL_CUAHANGLINHKIENMAYTINH1;User ID=sa"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
