--- a/da-ptud-qllkmt/GUI/GUI.csproj
+++ b/da-ptud-qllkmt/GUI/GUI.csproj
@@ -628,6 +628,8 @@
     <Content Include="Images\ban-phim-co-akko-3108-v2-world-tour-tokyo.jpg" />
     <Content Include="Images\intelcorei5-12600k.jpg" />
     <Content Include="Images\PSU_GG_GP-P1000GM-5.jpg" />
+    <None Include="Resources\clipboard_paper_file_correct_done_list_document_icon_219488 %281%29.png" />
+    <None Include="Resources\clipboard_paper_file_correct_done_list_document_icon_219488.png" />
     <None Include="Resources\96_pc_gaming %281%29.jpg" />
     <None Include="Resources\distribution-center.png" />
     <None Include="Resources\manufacture.png" />
