--- a/da-ptud-qllkmt/DTO/DTO.csproj
+++ b/da-ptud-qllkmt/DTO/DTO.csproj
@@ -80,6 +80,7 @@
     <Compile Include="ThemSanPham.cs" />
     <Compile Include="TinhTrang.cs" />
     <Compile Include="View_BieuMauBaoHanh.cs" />
+    <Compile Include="View_BieuMauBH.cs" />
     <Compile Include="View_BieuMauGio.cs" />
     <Compile Include="View_BieuMauNhapHang.cs" />
   </ItemGroup>
