--- a/da-ptud-qllkmt/GUI/GUI.csproj
+++ b/da-ptud-qllkmt/GUI/GUI.csproj
@@ -444,6 +444,7 @@
     <Compile Include="XuLy\Constants.cs" />
     <Compile Include="XuLy\DangNhap.cs" />
     <Compile Include="XuLy\ExcelExport.cs" />
+    <Compile Include="XuLy\ExcelExportBaoHanh.cs" />
     <Compile Include="XuLy\ExcelExportBH.cs" />
     <Compile Include="XuLy\ExcelExportNV.cs" />
     <Compile Include="XuLy\ExcelExportPN.cs" />
